Added dynamic mapping loader to scan configurable folder for schema files at startup